<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Barcode Buddy</string>
    <string name="price_label">Price</string>
    <string name="brand_label">Brand</string>
    <string name="upc_label">UPC</string>
    <string name="product_name_label">Product Name</string>
    <string name="scan_label">Scan a barcode</string>
    <string name="add_product_label">Submit</string>  
    <string name="search_product">Search</string>  
    <string name="menu_settings">Settings</string>
    <string name="emptystring"></string>
</resources>